--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,9 @@ nav a:hover {
     font-weight: bold;
 }
 
-.profile header {
+.profile header,
+.slide h3,
+.slide p {
     text-align: center;
 }
 
@@ -39,9 +41,11 @@ nav a:hover {
     width: 200px;
 }
 
-.card {
+.ancaman-box {
+    padding: 10px;
+    background-color: #d1d1e9;
     border-radius: 5px;
-    padding: 20px;
+    margin: 10px;
 }
 
 .kontak {
@@ -119,14 +123,6 @@ header {
     border-radius: 10px;
 }
 
-.slide h3 {
-    text-align: center;
-}
-
-.slide p {
-    text-align: center;
-}
-
 .slider img {
     width: 100%;
     height: 450px;
@@ -134,8 +130,8 @@ header {
     border-radius: 8px;
 }
 
-.prev,
-.next {
+.slider-prev,
+.slider-next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -153,16 +149,16 @@ header {
     margin: 10px;
 }
 
-.prev {
+.slider-prev {
     left: 10px;
 }
 
-.next {
+.slider-next {
     right: 10px;
 }
 
-.prev:hover,
-.next:hover {
+.slider-prev:hover,
+.slider-next:hover {
     background-color: #6246ea;
 }
 
